test/Fail/Quotient.agda
open import Agda.Builtin.Erased.Quotient
